--- a/qurator/sbb_images/webapp/static/search.html
+++ b/qurator/sbb_images/webapp/static/search.html
@@ -49,10 +49,10 @@
             <div class="col-md-3"></div>
         </div>
         <div class="row mt-2 text-center">
-            <div class="col-md-3"></div>
-            <div class="col-md-6" id="search-results">
+            <!-- <div class="col-md-3"></div> -->
+            <div class="col-md-12" id="search-results">
             </div>
-            <div class="col-md-3"></div>
+            <!--<div class="col-md-3"></div>-->
         </div>
     </div>
 </div>
