--- a/qurator/sbb_images/webapp/static/search.html
+++ b/qurator/sbb_images/webapp/static/search.html
@@ -9,15 +9,20 @@
     <script src="js/jquery-3.4.1.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css" crossorigin="anonymous">
     <style>
+        .fit-result-image{
+                max-height: 20vh;
+                width: auto;
+        }
+
         @media screen {
             .fit-image{
-                max-height: 75vh;
+                max-height: 35vh;
                 width: auto;
             }
         }
         @media screen and (max-width : 600px) {
             .fit-image{
-                max-height: 30vh;
+                max-height: 20vh;
                 width: auto;
             }
         }
