--- a/qurator/sbb_images/webapp/static/search.html
+++ b/qurator/sbb_images/webapp/static/search.html
@@ -26,9 +26,6 @@
                 width: auto;
             }
         }
-
-
-
     </style>
     <title>Image Search</title>
 </head>
@@ -49,19 +46,16 @@
         <div class="row mt-2 text-center">
             <div class="col-md-3"></div>
             <div class="col-md-6">
-                <img class="img-fluid fit-image" id='img-upload'/>
+                <img class="img-fluid fit-image" id='img-upload' src=""/>
             </div>
             <div class="col-md-3"></div>
         </div>
         <div class="row mt-2 text-center">
-            <!-- <div class="col-md-3"></div> -->
             <div class="col-md-12" id="search-results">
             </div>
-            <!--<div class="col-md-3"></div>-->
         </div>
     </div>
 </div>
 <script src="js/search.js"></script>
-</div>
 </body>
 </html>
