--- a/qurator/sbb_images/webapp/static/search.html
+++ b/qurator/sbb_images/webapp/static/search.html
@@ -35,8 +35,8 @@
     <div class="container">
         <div class="row mt-2 text-center">
             <div class="col-md-3"></div>
-            <div class="col-md-6">
-                <div class="card mt-2 mb-1">
+            <div class="col-md-6" id="search-rgn">
+                <!-- <div class="card mt-2 mb-1">
                     <div class="card-body">
                         <img class="img-fluid fit-image mt-3" id='img-upload' src=""/>
                         <form action="similar" method="post" enctype="multipart/form-data">
@@ -44,14 +44,12 @@
                             <input type="file" name="file" id="the-image" style="display: none;"/>
                         </form>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <div class="col-md-3"></div>
     </div>
-    <div class="row mt-2 text-center">
-        <div class="col-md-12" id="search-results">
-        </div>
+    <div class="row mt-2 text-center" id="search-results">
     </div>
 </div>
 </div>
