--- a/qurator/sbb_images/webapp/static/search.html
+++ b/qurator/sbb_images/webapp/static/search.html
@@ -31,7 +31,7 @@
     <title>Image Search</title>
 </head>
 <body>
-<div class="container">
+<div class="container-fluid">
     <div class="container">
         <div class="row mt-2 text-center">
             <div class="col-md-3"></div>
