provide document links in annotator

--- a/qurator/sbb_images/webapp/static/annotator.html
+++ b/qurator/sbb_images/webapp/static/annotator.html
@@ -37,7 +37,9 @@
         <div class="col text-center">
             <div class="card mt-2 mb-1">
                 <div class="card-body">
-                    <img id="preview" class="img-fluid fit-image" src=""/>
+                    <a id="preview-link" href="" target="_blank" rel="noopener noreferrer">
+                        <img id="preview" class="img-fluid fit-image" src=""/>
+                    </a>
                     <br/>
                     <div id="label-rgn">
                         <!-- <span class="badge badge-info">unbekannt</span> -->
