add image region support

--- a/qurator/sbb_images/webapp/static/search.html
+++ b/qurator/sbb_images/webapp/static/search.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <script src="js/jquery-3.4.1.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/cropper.min.css" crossorigin="anonymous">
     <style>
         .fit-result-image{
                 max-height: 20vh;
@@ -45,5 +46,6 @@
 </div>
 </div>
 <script src="js/search.js"></script>
+<script src="js/cropper.min.js"></script>
 </body>
 </html>
