small UI improvements

--- a/qurator/sbb_images/webapp/static/search.html
+++ b/qurator/sbb_images/webapp/static/search.html
@@ -27,7 +27,6 @@
                 width: auto;
             }
         }
-
     </style>
     <title>Image Search</title>
 </head>
@@ -39,11 +38,11 @@
             <div class="col-md-6" id="search-rgn">
             </div>
         </div>
-        <div class="col-md-3"></div>
+        <div class="col-md-3">
+        </div>
     </div>
     <div class="row mt-2 text-center" id="search-results">
     </div>
-</div>
 </div>
 <script src="js/search.js"></script>
 <script src="js/cropper.min.js"></script>
