--- a/qurator/sbb_images/webapp/static/search.html
+++ b/qurator/sbb_images/webapp/static/search.html
@@ -28,12 +28,26 @@
                 width: auto;
             }
         }
+
     </style>
     <title>Image Search</title>
 </head>
 <body>
 <div class="container-fluid">
     <div class="container">
+        <div class="row mt-5">
+            <div class="col-12">
+                <div class="row">
+                    <div class="col text-center">
+                        <h3>Image Search</h3>
+                        <a href="search.html">Upload search image</a> |
+                        <a href="https://github.com/qurator-spk/sbb_images"
+                            target="_blank" tabindex="-1">Github</a>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="row mt-2 text-center">
             <div class="col-md-3"></div>
             <div class="col-md-6" id="search-rgn">
