--- a/qurator/sbb_images/webapp/static/region-annotator.html
+++ b/qurator/sbb_images/webapp/static/region-annotator.html
@@ -29,6 +29,8 @@
                 width: auto;
             }
         }
+
+
     </style>
 </head>
 
@@ -37,24 +39,24 @@
     <div class="row align-items-top" id="url-selection">
         <form class="col-sm-9 col mt-3" id="edit-form">
 
-                <div class="form-group form-inline justify-content-center">
-                    <div class="input-group" style="width: 100%;">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">Image-URL:</span>
-                        </div>
-                        <input type="text" list="suggestions" class="form-control form-control-sm"
-                               id="annotation-url" autocomplete="off"/>
-                        <datalist id="suggestions">
-                        </datalist>
-                        <div class="input-group-append">
-                            <button class="btn btn-primary" id="edit-button" type="submit" disabled> Edit</button>
-                        </div>
+            <div class="form-group form-inline justify-content-center">
+                <div class="input-group" style="width: 100%;">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Image-URL:</span>
+                    </div>
+                    <input type="text" list="suggestions" class="form-control form-control-sm"
+                           id="annotation-url" autocomplete="off"/>
+                    <datalist id="suggestions">
+                    </datalist>
+                    <div class="input-group-append">
+                        <button class="btn btn-primary" id="edit-button" type="submit" disabled> Edit</button>
                     </div>
                 </div>
-                <div class="collapse" id="search-result-list-collapse">
-                    <div class="list-group" id="search-result-list" style="overflow-y: scroll;">
-                    </div>
+            </div>
+            <div class="collapse" id="search-result-list-collapse">
+                <div class="list-group" id="search-result-list" style="overflow-y: scroll;">
                 </div>
+            </div>
         </form>
         <div class="col-sm-3 col mt-1 text-center" id="auth-area">
         </div>
@@ -120,30 +122,27 @@
                     <button class="btn btn-primary back-to-editor">Back</button>
                 </div>
             </div>
-
         </div>
-        <div class="row d-none" id="data-export">
-            <div class="col-lg col-md mt-1 mb-1">
-                <div class="card mt-2 mb-1">
-                    <div class="card-body">
-                        <hr class="mt-3">
+    </div>
+    <div class="row d-none" id="data-export">
+        <div class="col-lg col-md mt-1 mb-1">
+            <div class="card mt-2 mb-1">
+                <div class="card-body">
+                    <hr class="mt-3">
 
-                        <div class="card-title text-center mt-3">
-                            Data Export
-                        </div>
-
-                        <button class="btn btn-sm btn-secondary">Download JSON</button>
-                        <button class="btn btn-sm btn-secondary" disabled>Download TEI</button>
+                    <div class="card-title text-center mt-3">
+                        Data Export
                     </div>
 
-                    <div class="card-footer text-right">
-                        <button class="btn btn-primary back-to-editor">Back</button>
-                    </div>
+                    <button class="btn btn-sm btn-secondary" id="json-export">Download JSON</button>
+                    <button class="btn btn-sm btn-secondary" id="sql-export">Download Database</button>
                 </div>
 
+                <div class="card-footer text-right">
+                    <button class="btn btn-primary back-to-editor">Back</button>
+                </div>
             </div>
         </div>
-
     </div>
     <script src="js/basic-auth.js"></script>
     <script src="js/region-annotator.js"></script>
