suppress submit event everywhere

--- a/qurator/sbb_images/webapp/static/region-annotator.html
+++ b/qurator/sbb_images/webapp/static/region-annotator.html
@@ -96,7 +96,7 @@
 
                     <hr>
 
-                    <form class="mt-2">
+                    <form class="mt-2" id="configure-form">
                         <div class="form-row">
                             <div class="form-group col">
                                 <label for="conf-url">Image-URL/URL-pattern</label>
