--- a/qurator/sbb_images/webapp/static/region-annotator.html
+++ b/qurator/sbb_images/webapp/static/region-annotator.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="collapse" id="search-result-list-collapse">
-                <div class="list-group" id="search-result-list" style="overflow-y: scroll;">
+                <div class="list-group" id="search-result-list" style="max-height:75vh; overflow-y: scroll;">
                 </div>
             </div>
         </form>
@@ -81,7 +81,7 @@
         <div class="col-lg col-md mt-1 mb-1">
             <div class="card mt-2 mb-1">
                 <div class="card-header">
-                    <h1> Configuration </h1>
+                    <h3> Configuration </h3>
                 </div>
                 <div class="card-body">
 
@@ -91,7 +91,7 @@
 
                     <hr>
 
-                    <div class="list-group" id="url-list" style="overflow-y: scroll;">
+                    <div class="list-group" id="url-list" style="max-height:33vh; overflow-y: scroll;">
                     </div>
 
                     <hr>
