--- a/qurator/sbb_images/webapp/static/region-annotator.html
+++ b/qurator/sbb_images/webapp/static/region-annotator.html
@@ -143,6 +143,7 @@
                     </div>
 
                     <button class="btn btn-sm btn-secondary" id="json-export">Download JSON</button>
+                    <button class="btn btn-sm btn-secondary" id="xml-export">Download Raw-XML</button>
                     <button class="btn btn-sm btn-secondary" id="sql-export">Download Database</button>
                 </div>
 
