--- a/qurator/sbb_images/webapp/static/search.html
+++ b/qurator/sbb_images/webapp/static/search.html
@@ -55,7 +55,7 @@
                             <div class="from-group row">
                                 <label class="col-6 col-form-label">Dataset:</label>
                                 <div class="col-6">
-                                    <select class="form-control">
+                                    <select class="form-control" id="dataset-select">
                                         <option>Dataset A</option>
                                         <option>Dataset B</option>
                                         <option>Dataset C</option>
@@ -65,7 +65,7 @@
                             <div class="from-group row">
                                 <label class="col-6 col-form-label">Model:</label>
                                 <div class="col-6">
-                                    <select class="form-control">
+                                    <select class="form-control" id="model-select">
                                         <option>Model A</option>
                                         <option>Model B</option>
                                         <option>Model C</option>
