Proper state handeling. Multi-Configuration.

--- a/qurator/sbb_images/webapp/static/search.html
+++ b/qurator/sbb_images/webapp/static/search.html
@@ -53,24 +53,35 @@
                     <div class="card-body text-left" id="search-settings">
                         <div class="form">
                             <div class="from-group row">
-                                <label class="col-6 col-form-label">Dataset:</label>
-                                <div class="col-6">
+                                <label class="col-3 col-form-label">Search in:</label>
+                                <div class="col-9">
                                     <select class="form-control" id="dataset-select">
                                         <option>Dataset A</option>
                                         <option>Dataset B</option>
                                         <option>Dataset C</option>
                                         <option>Dataset D</option>
-                                    </select></div>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="from-group row mt-3">
+                                <div class="col">
+                                     <p class="text-muted" id="dataset-description"></p>
+                                </div>
                             </div>
                             <div class="from-group row">
-                                <label class="col-6 col-form-label">Model:</label>
-                                <div class="col-6">
+                                <label class="col-3 col-form-label">Model:</label>
+                                <div class="col-9">
                                     <select class="form-control" id="model-select">
                                         <option>Model A</option>
                                         <option>Model B</option>
                                         <option>Model C</option>
                                         <option>Model D</option>
                                     </select>
+                                </div>
+                            </div>
+                            <div class="from-group row mt-3">
+                                <div class="col">
+                                    <p class="text-muted" id="model-description"></p>
                                 </div>
                             </div>
                         </div>
