Refactoring before addition of further features.

--- a/qurator/sbb_images/webapp/static/search.html
+++ b/qurator/sbb_images/webapp/static/search.html
@@ -196,6 +196,9 @@
         </div>
     </div>
 </div>
+<script src="js/search-configuration.js"></script>
+<script src="js/search-by-image.js"></script>
+<script src="js/search-result-list.js"></script>
 <script src="js/search.js"></script>
 <script src="js/cropper.min.js"></script>
 </body>
