iconclass tag visualization

--- a/qurator/sbb_images/webapp/static/search.html
+++ b/qurator/sbb_images/webapp/static/search.html
@@ -29,6 +29,28 @@
                 width: auto;
             }
         }
+
+        .selected-0 {
+            background: rgb(0, 30, 0)
+        }
+        .selected-1 {
+            background: rgb(0, 60, 0)
+        }
+        .selected-2 {
+            background: rgb(0, 90, 0)
+        }
+        .selected-3 {
+            background: rgb(0, 120, 0)
+        }
+        .selected-4 {
+            background: rgb(0, 150, 0)
+        }
+        .selected-5 {
+            background: rgb(0, 180, 0)
+        }
+        .selected-6 {
+            background: rgb(0, 210, 0)
+        }
     </style>
     <title>Image Search</title>
 </head>
